--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Salt: Pay Debt, Live Life</title>
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="description" content="Demo project">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<header>
-			<nav>
+			<nav class="navigation">
 				<a href="#" class="salt-logo"></a>
 				<div class="nav-links">
 					<a href="#">About</a>
@@ -23,53 +23,100 @@
 			</nav>
 		</header>
 		<main>
-			<section>
-				<div class="copy-block">
-					<h1>Salt</h1>
+			<section class="banner-section">
+				<div class="section-filter"></div>
+				<div class="copy-header">
 					<h2>Dream It. Achieve It.</h2>
-					<h3>Salt is a non-profit here to help you with your battle against student loans. Between the FASFA, complex loan rules, clunky government websites, and high tuitions, paying for college can seem like a nightmare. At Salt, we want to turn that nightmare into your dream.</h3>
+				</div>
+				<div class="copy-block">
+					<h3>Salt helps you every step of the way with preparing and paying for your student loans.</h3>
+					<a href="#register" class="register">Join Salt</a>
+				</div>
+				<div class="register-mobile-wrapper">
 					<a href="#register" class="register">Join Salt</a>
 				</div>
 			</section>
-			<section>
-				<div class="copy-block">
+			<div class="filler-section"></div>
+			<section class="banner-section">
+				<div class="section-filter"></div>
+				<div class="copy-header">
 					<h2>Saving for College</h2>
+				</div>
+				<div class="copy-block">
 					<h3>It's never too early to start planning for college costs, but Salt can help you keep stress down and keep your savings up.</h3>
 					<a href="#register" class="register">Join Salt</a>
 				</div>
+				<div class="register-mobile-wrapper">
+					<a href="#register" class="register">Join Salt</a>
+				</div>
 			</section>
-			<section>
-				<div class="copy-block">
+			<div class="filler-section"></div>
+			<section class="banner-section">
+				<div class="section-filter"></div>
+				<div class="copy-header">
 					<h2>Finding Funding</h2>
+				</div>
+				<div class="copy-block">
 					<h3>Tuition is at an all time high, and sometimes personal savings just aren't enough. Let Salt help you find the best scholarships and grants, and give you advice on which loans you should take-- or avoid.</h3>
 					<a href="#register" class="register">Join Salt</a>
-				<div class="col-12-sm col-6-med">
+				</div>
+				<div class="register-mobile-wrapper">
+					<a href="#register" class="register">Join Salt</a>
+				</div>
 			</section>
-			<section>
-				<div class="copy-block">	
+			<div class="filler-section"></div>
+			<section class="banner-section">
+				<div class="section-filter"></div>
+				<div class="copy-header">
 					<h2>Keep Debt Down</h2>
-					<h3>Debt can be an overwhelming stressor while you're sitting the classroom studying. Instead of waiting to go into repayment, Salt can show you how to start attacking your debt now. Find internships, consolidate debt, and breathe easy.</h3>
+				</div>
+				<div class="copy-block">	
+					<h3>Debt can be an overwhelming stressor while you're sitting the classroom studying. Salt can show you how to start attacking your debt now. Find internships, consolidate debt, and breathe easy.</h3>
 					<a href="#register" class="register">Join Salt</a>
-				<div class="col-12-sm col-6-med">
+				</div>
+				<div class="register-mobile-wrapper">
+					<a href="#register" class="register">Join Salt</a>
+				</div>
 			</section>
-			<section>
-				<div class="copy-block">
+			<div class="filler-section"></div>
+			<section class="banner-section" class="banner-section">
+				<div class="section-filter"></div>
+				<div class="copy-header">
 					<h2>Pay Debt Back</h2>
-					<h3>Graduation should be a celebration for all of your hard work, but without a plan, it can quickly become a desperate time. Know what your best routes for repaying your debt are-- before you have to.</h3>
+				</div>
+				<div class="copy-block">
+					<h3>Graduation should be a celebration for all of your hard work, but without a plan, it can quickly become a desperate time.</h3>
+					<a href="#register" class="register">Join Salt</a>
+				</div>
+				<div class="register-mobile-wrapper">
 					<a href="#register" class="register">Join Salt</a>
 				</div>
 			</section>
-			<section>
-				<div class="copy-block">
+			<div class="filler-section"></div>
+			<section class="banner-section" class="banner-section">
+				<div class="section-filter"></div>
+				<div class="copy-header">
 					<h2>Grad School</h2>
-					<h3>Continuing your education can greatly prepare you for your career, and in some fields, it's even mandatory. More school can mean more debt, but maybe it doesn't have to mean more debt stress! Salt can show you the way.</h3>
+				</div>
+				<div class="copy-block">
+					<h3>Continuing your education can greatly prepare you for your career, and in some fields, it's even mandatory. More school can mean more costs, but that doesn't have to mean more stress!</h3>
+					<a href="#register" class="register">Join Salt</a>
+				</div>
+				<div class="register-mobile-wrapper">
 					<a href="#register" class="register">Join Salt</a>
 				</div>
 			</section>
-			<section>
+			<div class="filler-section"></div>
+			<section class="banner-section" class="banner-section">
+				<div class="section-filter"></div>
+				<div class="copy-header">
+					<h2>Start Your Career</h2>
+				</div>
 				<div class="copy-block">
-					<h2>Start your career</h2>
-					<h3>You've studied hard, gotten good grades, and maybe even embarked on an internship or two. You may not know where your future will take you, but you know you need a job. Salt can help you with that.</h3>
+					<h3>You've studied hard, gotten good grades, and maybe even embarked on an internship or two. You may not know where your future will take you, but you know you need a job.</h3>
+					<a href="#register" class="register">Join Salt</a>
+				</div>
+				<div class="register-mobile-wrapper">
 					<a href="#register" class="register">Join Salt</a>
 				</div>
 			</section>
