--- a/index.html
+++ b/index.html
@@ -23,14 +23,22 @@
 			</nav>
 		</header>
 		<main>
-			<section class="banner-section">
+			<section class="banner-section first-banner">
 				<div class="section-filter"></div>
 				<div class="copy-header">
 					<h2>Dream It. Achieve It.</h2>
 				</div>
-				<div class="copy-block">
-					<h3>Salt helps you every step of the way with preparing and paying for your student loans.</h3>
-					<a href="#register" class="register">Join Salt</a>
+				<div class="first-section-content">
+					<div class="icon-block copy-block">
+						<i class="article-icon icon"></i>
+						<i class="course-icon icon"></i>
+						<i class="tool-icon icon"></i>
+						<i class="video-icon icon"></i>
+					</div>
+					<div class="copy-block">
+						<p>Salt helps you every step of the way with preparing and paying for your student loans.</p>
+						<a href="#register" class="register">Join Salt</a>
+					</div>
 				</div>
 				<div class="register-mobile-wrapper">
 					<a href="#register" class="register">Join Salt</a>
@@ -43,7 +51,7 @@
 					<h2>Saving for College</h2>
 				</div>
 				<div class="copy-block">
-					<h3>It's never too early to start planning for college costs, but Salt can help you keep stress down and keep your savings up.</h3>
+					<p>It's never too early to start planning for college costs, but Salt can help you keep stress down and keep your savings up.</p>
 					<a href="#register" class="register">Join Salt</a>
 				</div>
 				<div class="register-mobile-wrapper">
@@ -57,7 +65,7 @@
 					<h2>Finding Funding</h2>
 				</div>
 				<div class="copy-block">
-					<h3>Tuition is at an all time high, and sometimes personal savings just aren't enough. Let Salt help you find the best scholarships and grants, and give you advice on which loans you should take-- or avoid.</h3>
+					<p>Tuition is at an all time high, and sometimes personal savings just aren't enough. Let Salt help you find the best scholarships and grants, and give you advice on which loans you should take-- or avoid.</p>
 					<a href="#register" class="register">Join Salt</a>
 				</div>
 				<div class="register-mobile-wrapper">
@@ -71,7 +79,7 @@
 					<h2>Keep Debt Down</h2>
 				</div>
 				<div class="copy-block">	
-					<h3>Debt can be an overwhelming stressor while you're sitting the classroom studying. Salt can show you how to start attacking your debt now. Find internships, consolidate debt, and breathe easy.</h3>
+					<p>Debt can be an overwhelming stressor while you're sitting the classroom studying. Salt can show you how to start attacking your debt now. Find internships, consolidate debt, and breathe easy.</p>
 					<a href="#register" class="register">Join Salt</a>
 				</div>
 				<div class="register-mobile-wrapper">
@@ -85,7 +93,7 @@
 					<h2>Pay Debt Back</h2>
 				</div>
 				<div class="copy-block">
-					<h3>Graduation should be a celebration for all of your hard work, but without a plan, it can quickly become a desperate time.</h3>
+					<p>Graduation should be a celebration for all of your hard work, but without a plan, it can quickly become a desperate time.</p>
 					<a href="#register" class="register">Join Salt</a>
 				</div>
 				<div class="register-mobile-wrapper">
@@ -99,7 +107,7 @@
 					<h2>Grad School</h2>
 				</div>
 				<div class="copy-block">
-					<h3>Continuing your education can greatly prepare you for your career, and in some fields, it's even mandatory. More school can mean more costs, but that doesn't have to mean more stress!</h3>
+					<p>Continuing your education can greatly prepare you for your career, and in some fields, it's even mandatory. More school can mean more costs, but that doesn't have to mean more stress!</p>
 					<a href="#register" class="register">Join Salt</a>
 				</div>
 				<div class="register-mobile-wrapper">
@@ -113,7 +121,7 @@
 					<h2>Start Your Career</h2>
 				</div>
 				<div class="copy-block">
-					<h3>You've studied hard, gotten good grades, and maybe even embarked on an internship or two. You may not know where your future will take you, but you know you need a job.</h3>
+					<p>You've studied hard, gotten good grades, and maybe even embarked on an internship or two. You may not know where your future will take you, but you know you need a job.</p>
 					<a href="#register" class="register">Join Salt</a>
 				</div>
 				<div class="register-mobile-wrapper">
