changes for the day, new images, new icons

--- a/index.html
+++ b/index.html
@@ -31,17 +31,19 @@
 				<div class="first-section-content">
 					<div class="icon-block copy-block">
 						<i class="article-icon icon"></i>
-						<i class="course-icon icon"></i>
 						<i class="tool-icon icon"></i>
 						<i class="video-icon icon"></i>
+						<i class="course-icon icon"></i>
+						<i class="more-icon icon"></i>
 					</div>
 					<div class="copy-block">
 						<p>Salt helps you every step of the way with preparing and paying for your student loans.</p>
-						<a href="#register" class="register">Join Salt</a>
+						<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
+						<a href="#" class="secondary-cta">Why Use Salt?</a>
 					</div>
-				</div>
-				<div class="register-mobile-wrapper">
-					<a href="#register" class="register">Join Salt</a>
+					<div class="register-mobile-wrapper">
+						<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
+					</div>
 				</div>
 			</section>
 			<div class="filler-section"></div>
@@ -52,10 +54,10 @@
 				</div>
 				<div class="copy-block">
 					<p>It's never too early to start planning for college costs, but Salt can help you keep stress down and keep your savings up.</p>
-					<a href="#register" class="register">Join Salt</a>
+					<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
 				</div>
 				<div class="register-mobile-wrapper">
-					<a href="#register" class="register">Join Salt</a>
+					<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
 				</div>
 			</section>
 			<div class="filler-section"></div>
@@ -65,25 +67,25 @@
 					<h2>Finding Funding</h2>
 				</div>
 				<div class="copy-block">
-					<p>Tuition is at an all time high, and sometimes personal savings just aren't enough. Let Salt help you find the best scholarships and grants, and give you advice on which loans you should take-- or avoid.</p>
-					<a href="#register" class="register">Join Salt</a>
+					<p>Tuition is at an all time high, and sometimes personal savings just aren't enough. Let Salt help you find the best scholarships, grants, and loans for you.</p>
+					<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
 				</div>
 				<div class="register-mobile-wrapper">
-					<a href="#register" class="register">Join Salt</a>
+					<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
 				</div>
 			</section>
 			<div class="filler-section"></div>
 			<section class="banner-section">
-				<div class="section-filter"></div>
+				<!-- Don't want this because image is already washed out <div class="section-filter"></div> -->
 				<div class="copy-header">
 					<h2>Keep Debt Down</h2>
 				</div>
 				<div class="copy-block">	
 					<p>Debt can be an overwhelming stressor while you're sitting the classroom studying. Salt can show you how to start attacking your debt now. Find internships, consolidate debt, and breathe easy.</p>
-					<a href="#register" class="register">Join Salt</a>
+					<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
 				</div>
 				<div class="register-mobile-wrapper">
-					<a href="#register" class="register">Join Salt</a>
+					<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
 				</div>
 			</section>
 			<div class="filler-section"></div>
@@ -94,10 +96,10 @@
 				</div>
 				<div class="copy-block">
 					<p>Graduation should be a celebration for all of your hard work, but without a plan, it can quickly become a desperate time.</p>
-					<a href="#register" class="register">Join Salt</a>
+					<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
 				</div>
 				<div class="register-mobile-wrapper">
-					<a href="#register" class="register">Join Salt</a>
+					<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
 				</div>
 			</section>
 			<div class="filler-section"></div>
@@ -108,10 +110,10 @@
 				</div>
 				<div class="copy-block">
 					<p>Continuing your education can greatly prepare you for your career, and in some fields, it's even mandatory. More school can mean more costs, but that doesn't have to mean more stress!</p>
-					<a href="#register" class="register">Join Salt</a>
+					<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
 				</div>
 				<div class="register-mobile-wrapper">
-					<a href="#register" class="register">Join Salt</a>
+					<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
 				</div>
 			</section>
 			<div class="filler-section"></div>
@@ -122,10 +124,10 @@
 				</div>
 				<div class="copy-block">
 					<p>You've studied hard, gotten good grades, and maybe even embarked on an internship or two. You may not know where your future will take you, but you know you need a job.</p>
-					<a href="#register" class="register">Join Salt</a>
+					<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
 				</div>
 				<div class="register-mobile-wrapper">
-					<a href="#register" class="register">Join Salt</a>
+					<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
 				</div>
 			</section>
 		</main>
