--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
 		<main>
 			<section class="banner-section first-banner">
 				<div class="section-filter"></div>
+				<img src="img/study.jpg">
 				<div class="copy-header">
 					<h2>Dream It. Achieve It.</h2>
 				</div>
 				<div class="first-section-content">
-					<div class="icon-block copy-block">
+					<div class="icon-block">
 						<i class="article-icon icon"></i>
 						<i class="tool-icon icon"></i>
 						<i class="video-icon icon"></i>
@@ -43,11 +44,13 @@
 					</div>
 					<div class="register-mobile-wrapper">
 						<a data-window-shade="registrationOverlay" href="#register" class="register registrationOverlay-link">Join Salt</a>
+						<a href="#" class="secondary-cta">Why Use Salt?</a>
 					</div>
 				</div>
 			</section>
 			<div class="filler-section"></div>
 			<section class="banner-section">
+				<img src="img/school2.jpg">
 				<div class="section-filter"></div>
 				<div class="copy-header">
 					<h2>Saving for College</h2>
@@ -63,6 +66,7 @@
 			<div class="filler-section"></div>
 			<section class="banner-section">
 				<div class="section-filter"></div>
+				<img src="img/room.jpg">
 				<div class="copy-header">
 					<h2>Finding Funding</h2>
 				</div>
@@ -77,6 +81,7 @@
 			<div class="filler-section"></div>
 			<section class="banner-section">
 				<!-- Don't want this because image is already washed out <div class="section-filter"></div> -->
+				<img src="img/outside.jpg">
 				<div class="copy-header">
 					<h2>Keep Debt Down</h2>
 				</div>
@@ -91,6 +96,7 @@
 			<div class="filler-section"></div>
 			<section class="banner-section" class="banner-section">
 				<div class="section-filter"></div>
+				<img src="img/library2.jpg">
 				<div class="copy-header">
 					<h2>Pay Debt Back</h2>
 				</div>
@@ -105,6 +111,7 @@
 			<div class="filler-section"></div>
 			<section class="banner-section" class="banner-section">
 				<div class="section-filter"></div>
+				<img src="img/graduation2.jpg">
 				<div class="copy-header">
 					<h2>Grad School</h2>
 				</div>
@@ -119,6 +126,7 @@
 			<div class="filler-section"></div>
 			<section class="banner-section" class="banner-section">
 				<div class="section-filter"></div>
+				<img src="img/study2.jpg">
 				<div class="copy-header">
 					<h2>Start Your Career</h2>
 				</div>
